# neural_net

./: .gitignore  .travis.yml  README.md  pyproject.toml  tox.ini
neural_net/: neuron.py
