[tool.poetry]
name = "neural_net"
version = "0.1.0"
description = ""
authors = ["Jim Ladd <jladd@redhat.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = '^5.2'
flake8 = "*"
mock = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
